Bug 136323 - LibreOffice 6.4.3.2 crash ASSERT: "object == obj" in qaccessiblecache.cpp, line 122
Summary: LibreOffice 6.4.3.2 crash ASSERT: "object == obj" in qaccessiblecache.cpp, li...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.1.0 target:7.0.2 target:6.4.7
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-08-31 10:08 UTC by Jaak Ristioja
Modified: 2020-09-08 10:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
gdbtrace.log (35.67 KB, text/plain)
2020-08-31 10:10 UTC, Jaak Ristioja
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaak Ristioja 2020-08-31 10:08:47 UTC
Description:
Multiple Gentoo Linux users experience an assertion failure when starting LibreOffice.

Steps to Reproduce:
1. Run any LibreOffice application, e.g. localc

Actual Results:
ASSERT: "object == obj" in file /var/tmp/portage/dev-qt/qtgui-5.15.0-r1/work/qtbase-everywhere-src-5.15.0/src/gui/accessible/qaccessiblecache.cpp, line 122
Application Error

Expected Results:
LibreOffice should have started as normal


Reproducible: Always


User Profile Reset: No



Additional Info:
Downstream bug report: https://bugs.gentoo.org/680186

Workarounds include changing the SAL_USE_VCLPLUGIN environment variable to bypass KDE integration or setting OOO_FORCE_DESKTOP=none.

I can still reproduce this with Libreoffice 6.4.3.2, Qt 5.15, KDE Frameworks 5.73.0, KDE Plasma 5.19.4.
Comment 1 Jaak Ristioja 2020-08-31 10:10:44 UTC
Created attachment 164913 [details]
gdbtrace.log

Here is today's gdbtrace.log from localc --backtrace.
Comment 2 Michael Weghorn 2020-09-07 16:03:10 UTC
(In reply to Jaak Ristioja from comment #0)
> ASSERT: "object == obj" in file
> /var/tmp/portage/dev-qt/qtgui-5.15.0-r1/work/qtbase-everywhere-src-5.15.0/
> src/gui/accessible/qaccessiblecache.cpp, line 122
> Application Error

That's inside the Qt library, and at a quick glance, the Q_ASSERT macro is being used there, which as far as I understand does nothing when the QT_NO_DEBUG macro is defined when building Qt.

I currently cannot reproduce with current master build on Debian testing (libqt5core5a package at version 5.14.2+dfsg-6.).
So this might be related to the build flags that Gentoo is using for the Qt libraries (which does not necessarily mean it's Gentoo's fault, but would explain why I cannot reproduce on Debian).
I think I saw something similar when testing some Qt app against a self-compiled Qt with debug information quite a while ago, don't remember whether it was even LibreOffice....

Can you recheck whether it still happens with a current daily build of master, available at [1]? You can install it in parallel as described at [2].

[1] https://dev-builds.libreoffice.org/daily/
[2] https://wiki.documentfoundation.org/Installing_in_parallel/Linux

Version: 7.0.1.2
Build ID: 00(Build:2)
CPU threads: 12; OS: Linux 5.7; UI render: default; VCL: kf5
Locale: en-GB (en_GB.UTF-8); UI: en-US
Debian package version: 1:7.0.1-1
Calc: threaded
Comment 3 Michael Weghorn 2020-09-07 17:18:49 UTC
Just self-compiled Qt again from the 5.15 branch with these options:

> ./configure -developer-build -no-optimize-debug -opensource -nomake examples -nomake tests -confirm-license

and can reproduce the crash there with the same LO build as used in comment 2.

Looks like it was actually an LO issue.
Comment 4 Michael Weghorn 2020-09-07 18:11:07 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/102196
Comment 5 Commit Notification 2020-09-07 19:15:43 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4461d49c6cfce22c2c96185b0a1d07bfe9709268

tdf#136323 qt5: Remember accessible object

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-09-08 08:06:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/72549d97c220d63d5fd5f6f38ae14f13c3e3d919

tdf#136323 qt5: Remember accessible object

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-09-08 08:07:22 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/8e6b7d5696378e946e904c1df87da83e139af90d

tdf#136323 qt5: Remember accessible object

It will be available in 6.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Jaak Ristioja 2020-09-08 09:27:54 UTC
I applied commit 4461d49c6cfce22c2c96185b0a1d07bfe9709268 as a user patch to app-office/libreoffice-6.4.3.2 on Gentoo and it seems to have fixed the issue.

Thank you very much for this fix and for your work on LibreOffice! :)
Comment 9 Michael Weghorn 2020-09-08 10:01:47 UTC
(In reply to Jaak Ristioja from comment #8)
> I applied commit 4461d49c6cfce22c2c96185b0a1d07bfe9709268 as a user patch to
> app-office/libreoffice-6.4.3.2 on Gentoo and it seems to have fixed the
> issue.
> 
> Thank you very much for this fix and for your work on LibreOffice! :)

You're welcome. Thanks for reporting the bug and the quick retest! :-)